# gitea_redmine_sync

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  dockercompse.yml  e2e.yml
e2e/: Dockerfile.redmine  Dockerfile.tests  docker-compose.yml
e2e/tests/: conftest.py  requirements.txt  test_e2e.py
gitea_redmine_sync/: __init__.py  app.py  cache.py  config.py  git_ops.py  webhook.py
gitea_redmine_sync/static/: index.html
src/gitea_redmine_sync/: app.py  cache.py  jobs.py  webhook.py  worker.py
tests/: conftest.py  test_cache.py  test_git_ops.py  test_jobs.py  test_webhook.py  test_worker.py
